# sample-notebooks

./: .gitignore  .travis.yml  Dockerfile  Index.ipynb  Index.md  README.md  aggregation.ipynb  bitemporal-backtrade.ipynb  cashladder.ipynb  cashladder.py  docker-compose.yml  requirements.dev.txt  requirements.txt  sample_login.ipynb  test_slides.ipynb  test_slides.slides.html
.github/: pull_request_template.md
.github/workflows/: build-and-test.yaml  (+6 more)
SDK quick start guides/: LUSID SDK quick start.ipynb
ci-tools/: job_matrix.json  write_job_matrix_json.py
ci_tools/convert_to_slides/: Dockerfile  README.md  pyproject.toml  tox.ini
ci_tools/convert_to_slides/convert_to_slides/: __main__.py  commands.py  notebook.py  notebook_repo.py  slide_metadata_checker.py  slides_exporter.py
ci_tools/convert_to_slides/convert_to_slides/services/: generate_service.py  validate_service.py
ci_tools/convert_to_slides/tests/: test__main__.py  test_notebook_repo.py  test_slides_exporter.py
ci_tools/convert_to_slides/tests/notebooks/: test_with_slide_metadata.ipynb  test_with_slide_metadata_executed.slides.html  test_with_slide_metadata_no_execute.slides.html
docgen/: README.md  README.mustache  __init__.py  nbmeta.py  parser.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINBOURNE Jupyter Notebook style guide.ipynb  FINBOURNE notebook style guide.ipynb  template.ipynb
examples/: README.md  index.ipynb
notebook-utils/: quick_func.py
notebook_utils/: __init__.py
standalone/: lusid.ipynb
tests/: Dockerfile  requirements.txt  test_notebooks.py  test_quick_func.py
(+810 files in other folders)
