[tool.poetry]
name = "convert-to-slides"
version = "0.1.0"
description = "convert a given list of notebooks to revealjs slides"
authors = ["FINBOURNE <engineering@finbourne.com>"]
readme = "README.md"
packages = [{include = "convert_to_slides"}]

[tool.poetry.dependencies]
python = "^3.7"
nbconvert = "^7.2.8"
traitlets = "^5.8.1"
nbformat = "^5.7.3"
ipykernel = "^5.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "*"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
tox = "^3.0.0"
coverage = {extras = ["toml"], version = "^7.0.5"}
tox-poetry = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.coverage.run]
omit = ["tests/**/*","*/site-packages/*"]
source = ["convert_to_slides"]
branch = true

[tool.coverage.report]
fail_under = 100